changed section small-contact, built services and fixed small global

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     color: #15263e;
     text-transform: uppercase;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1.5px;
 }
 
 .xl-text {
@@ -64,6 +64,36 @@ body {
     letter-spacing: 1px;
 }
 
+.title {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #4d4d4d;
+}
+
+/*  icons */
+.fa-mobile-alt,
+.fa-map-marker-alt,
+.fa-cogs,
+.fa-rocket,
+.fa-warehouse,
+.fa-shipping-fast,
+.fa-clipboard-list,
+.fa-dolly-flatbed,
+.fa-envelope-open-text {
+    color: #fff;
+    font-size: 30px;
+    line-height: 80px;
+}
+
+.fa-rocket,
+.fa-warehouse,
+.fa-shipping-fast,
+.fa-clipboard-list,
+.fa-dolly-flatbed,
+.fa-envelope-open-text {
+    line-height: 100px;
+}
+
 /* ########################
             NAV
 ########################## */
@@ -111,7 +141,7 @@ body {
 .header {
     background: url(../images/bg_home.jpg) no-repeat center -2vh;
     background-size: cover;
-    height: 80vh;
+    height: 65vh;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -173,25 +203,16 @@ body {
 /* ########################
         SMALL FOOTER
 ########################## */
-
 .small-footer {
     background-color: #dcdcde;
-    display: flex;
-    padding: 20px 0;
-    flex-direction: column;
-    align-items: center;
+    padding: 40px 0;
     text-align: center;
 }
 
-.small-footer__title {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #4d4d4d;
-    padding: 20px 0 5px;
-}
-
-.small-footer__text {
-    line-height: 130%;
+.small-footer__wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .small-footer__box {
@@ -200,20 +221,56 @@ body {
 }
 
 .small-footer__icon {
+    background-color: #374362;
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    background-color: #374362;
     margin: 0 auto;
 }
 
-.fa-mobile-alt,
-.fa-map-marker-alt,
-.fa-cogs {
-    color: #fff;
-    font-size: 30px;
-    line-height: 80px;
+.small-footer__title {
+    padding: 20px 0 5px;
 }
+
+.small-footer__text {
+    line-height: 130%;
+}
+
+/* ########################
+        SERVICES
+########################## */
+.services {
+    padding: 40px 0;
+    text-align: center;
+}
+
+.services__text {
+    padding: 10px 0 20px;
+}
+
+.services__boxes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.services__box {
+    width: 60%;
+    padding-top: 40px;
+}
+
+.services__title {
+    padding: 20px 0 5px;
+}
+
+.services__icon {
+    background: linear-gradient(to right, #a21af0, #ff0072);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
 
 /* ########################
         MEDIA QUERIES
@@ -232,6 +289,12 @@ body {
 
     .header__surname {
         font-size: 8.2rem;
+    }
+}
+
+@media (orientation: portrait) and (min-width: 768px) {
+    .header {
+        height: 60vh;
     }
 }
 
@@ -278,6 +341,18 @@ body {
     .about__right {
         width: 45%;
     }
+
+    .services__boxes {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-around;
+    }
+
+    .services__box {
+        width: 45%;
+    }
+
 }
 
 @media (min-width: 768px) {
@@ -304,12 +379,16 @@ body {
         width: 47%;
     }
 
-    /*  small footer */
-    .small-footer {
-        padding: 20px 0;
+
+    .small-footer__box {
+        width: 33.33%;
+    }
+
+
+    .small-footer__wrap {
+        display: flex;
         flex-direction: row;
-        justify-content: flex-start;
-        text-align: center;
+        align-items: flex-start;
     }
 }
 
@@ -320,7 +399,6 @@ body {
     .about__right {
         width: 46%;
     }
-
 }
 
 @media (min-width: 1200px) {
@@ -335,9 +413,17 @@ body {
         background: url(../images/about_person.png) no-repeat center;
     }
 
+    .about__right {
+        padding-left: 30px;
+    }
+
     .about__left,
     .about__right {
         width: 28%;
+    }
+
+    .services__box {
+        width: 30%;
     }
 }
 
@@ -360,4 +446,19 @@ body {
         font-size: 2.5rem;
     }
 
+    /* small footer */
+    .small-footer__icon {
+        margin: 0 25px 0 0;
+        text-align: center;
+    }
+
+    .small-footer__box {
+        display: flex;
+        align-items: center;
+        text-align: left;
+    }
+
+    .small-footer__title {
+        padding-top: 0;
+    }
 }
